# CLCudaAPI

./: CHANGELOG  CMakeLists.txt  LICENSE  README.md
cmake/Modules/: FindOpenCL.cmake
doc/: api.md
include/: clpp11.h  cupp11.h  cxpp11_common.hpp
samples/: advanced.cc  device_info.cc  simple.cc  smallest.cc
test/: unit_tests.cc
